--- a/index.html
+++ b/index.html
@@ -1,304 +1,290 @@
 <!DOCTYPE html>
 <html lang="ja">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>FTHP｜遊びの支援活動</title>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>FTHP｜遊びの支援活動</title>
 
-  <style>
-    body {
-      margin: 0;
-      font-family: -apple-system, BlinkMacSystemFont, "Segoe UI",
-        "Hiragino Kaku Gothic ProN", Meiryo, sans-serif;
-      color: #333;
-      background: #f7f9fc;
-      line-height: 1.75;
-    }
+<style>
+:root {
+  --bg: #f6f8fb;
+  --card: #ffffff;
+  --subtle: #eef2f7;
+  --text-main: #2b2b2b;
+  --text-sub: #666;
+  --accent: #ffd84d;
+}
 
-    img {
-      max-width: 100%;
-      height: auto;
-      display: block;
-    }
+* {
+  box-sizing: border-box;
+}
 
-    a {
-      color: #1a73e8;
-      text-decoration: none;
-    }
-    a:hover {
-      text-decoration: underline;
-    }
+body {
+  margin: 0;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI",
+    "Hiragino Kaku Gothic ProN", Meiryo, sans-serif;
+  background: var(--bg);
+  color: var(--text-main);
+  line-height: 1.65;
+}
 
-    .container {
-      max-width: 960px;
-      margin: 0 auto;
-      padding: 0 16px;
-    }
+img {
+  max-width: 100%;
+  display: block;
+}
 
-    /* Hero */
-    .hero {
-      position: relative;
-      background: url("images/hero.jpg") center center / cover no-repeat;
-      color: #fff;
-    }
-    .hero::before {
-      content: "";
-      position: absolute;
-      inset: 0;
-      background: rgba(0,0,0,0.35);
-    }
-    .hero-inner {
-      position: relative;
-      padding: 48px 0 56px;
-    }
-    .hero h1 {
-      font-size: 1.9rem;
-      margin-bottom: 16px;
-    }
-    .hero p {
-      font-size: 1.05rem;
-      max-width: 640px;
-    }
+a {
+  color: #1a73e8;
+  text-decoration: none;
+}
+a:hover {
+  text-decoration: underline;
+}
 
-    /* Section */
-    section {
-      background: #fff;
-      padding: 40px 0;
-      margin-bottom: 12px;
-    }
-    section h2 {
-      font-size: 1.45rem;
-      margin-bottom: 20px;
-    }
-    section p {
-      margin-bottom: 16px;
-    }
+.container {
+  max-width: 960px;
+  margin: 0 auto;
+  padding: 0 16px;
+}
 
-    /* Cards */
-    .cards {
-      display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(220px, 1fr));
-      gap: 20px;
-      margin-top: 28px;
-    }
-    .card {
-      background: #f2f6fb;
-      border-radius: 14px;
-      padding: 20px;
-      text-align: center;
-    }
-    .card img {
-      margin: 0 auto 14px;
-    }
+/* Hero */
+.hero {
+  position: relative;
+  background: url("images/hero.jpg") center / cover no-repeat;
+}
+.hero::before {
+  content: "";
+  position: absolute;
+  inset: 0;
+  background: rgba(0,0,0,.35);
+}
+.hero-inner {
+  position: relative;
+  padding: 48px 0 56px;
+  color: #fff;
+}
+.hero h1 {
+  font-size: 1.8rem;
+  margin: 0 0 12px;
+}
+.hero p {
+  max-width: 640px;
+  margin: 0;
+  opacity: .95;
+}
 
-    /* Support */
-    .support {
-      display: grid;
-      grid-template-columns: 1fr 1fr;
-      gap: 32px;
-      align-items: center;
-    }
-    .support + .support {
-      margin-top: 36px;
-    }
+/* Sections */
+section {
+  padding: 40px 0;
+}
+section + section {
+  padding-top: 24px;
+}
 
-    .note {
-      font-size: 0.9rem;
-      color: #666;
-    }
+h2 {
+  font-size: 1.4rem;
+  margin: 0 0 16px;
+}
 
-    /* CTA */
-    .cta {
-      background: #eef5ff;
-      padding: 56px 16px;
-      text-align: center;
-    }
-    .cta h2 {
-      margin-bottom: 16px;
-    }
-    .cta a {
-      display: inline-block;
-      margin-top: 20px;
-      padding: 12px 28px;
-      background: #ffd84d;
-      border-radius: 999px;
-      font-weight: bold;
-      color: #333;
-    }
+p {
+  margin: 0 0 14px;
+}
 
-    @media (max-width: 640px) {
-      .hero-inner {
-        padding: 40px 0 48px;
-      }
-      .hero h1 {
-        font-size: 1.6rem;
-      }
-      .support {
-        grid-template-columns: 1fr;
-      }
-    }
-  </style>
+/* Cards */
+.cards {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(220px,1fr));
+  gap: 20px;
+  margin-top: 24px;
+}
+.card {
+  background: var(--card);
+  border-radius: 14px;
+  padding: 20px;
+  box-shadow: 0 6px 20px rgba(0,0,0,.05);
+}
+.card img {
+  margin: 0 auto 12px;
+}
+
+/* Support */
+.support {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  gap: 28px;
+  align-items: center;
+  background: var(--card);
+  padding: 28px;
+  border-radius: 18px;
+  box-shadow: 0 8px 24px rgba(0,0,0,.05);
+}
+.support + .support {
+  margin-top: 28px;
+}
+
+.note {
+  font-size: .9rem;
+  color: var(--text-sub);
+}
+
+/* CTA */
+.cta {
+  background: var(--subtle);
+  padding: 56px 16px;
+  text-align: center;
+}
+.cta h2 {
+  margin-bottom: 12px;
+}
+.cta a {
+  display: inline-block;
+  margin-top: 18px;
+  padding: 12px 28px;
+  background: var(--accent);
+  border-radius: 999px;
+  color: #333;
+  font-weight: bold;
+}
+
+/* Responsive */
+@media (max-width: 640px) {
+  .hero-inner {
+    padding: 40px 0 48px;
+  }
+  .support {
+    grid-template-columns: 1fr;
+  }
+}
+</style>
 </head>
 
 <body>
 
-  <!-- Hero -->
-  <div class="hero">
-    <div class="container hero-inner">
-      <h1>
-        障がいのある子どもも<br>
-        自分で「遊べた」を感じられる場をつくる
-      </h1>
-      <p>
-        FTHPは、おもちゃの改造やスイッチ制作を通じて、<br>
-        「操作できないから遊べない」を減らすための遊びの支援活動を行っています。
-      </p>
-    </div>
-  </div>
-
-  <!-- About -->
-  <section>
-    <div class="container">
-      <h2>私たちの活動について</h2>
-      <p>
-        電池で動くおもちゃの多くは、小さなボタンやスイッチの操作が必要です。<br>
-        そのため、身体の動きに制限がある子どもにとっては、
-        「本当は興味があるのに遊べない」という状況が生まれがちです。
-      </p>
-      <p>
-        FTHPでは、市販のおもちゃに外部スイッチを取り付けたり、
-        お子さまの動きに合わせたスイッチを制作することで、
-        <strong>自分の力でおもちゃを動かして遊ぶ体験</strong>を支援しています。
-      </p>
-    </div>
-  </section>
-
-  <!-- What -->
-  <section>
-    <div class="container">
-      <h2>この支援でできるようになること</h2>
-
-      <div class="cards">
-        <div class="card">
-          <img src="images/illust_playable.png" alt="">
-          <p>
-            今まで遊べなかったおもちゃが、<br>
-            工夫によって再び遊べるようになります。
-          </p>
-        </div>
-
-        <div class="card">
-          <img src="images/illust_multi_switch.png" alt="">
-          <p>
-            複数のスイッチを使い分けることで、<br>
-            お子さまに合った操作方法を試せます。
-          </p>
-          <p>
-            <a href="https://sites.google.com/view/fthp/switch">▶ スイッチのサンプルを見る</a>
-          </p>
-        </div>
-
-        <div class="card">
-          <img src="images/illust_consult.png" alt="">
-          <p>
-            ご家庭の状況やお子さまの様子に合わせて、<br>
-            相談しながら進めることができます。
-          </p>
-        </div>
-      </div>
-    </div>
-  </section>
-
-  <!-- Support -->
-  <section>
-    <div class="container">
-
-      <div class="support">
-        <div>
-          <h2>スイッチ制作・おもちゃ改造</h2>
-          <p>
-            市販のおもちゃに外部スイッチを取り付けたり、
-            お子さまの身体の動きに合わせたスイッチを制作します。
-          </p>
-          <p>
-            動かしやすさだけでなく、安全性にも配慮し、
-            ご家庭で安心して使える形を一緒に考えます。
-          </p>
-          <p>
-            <a href="https://sites.google.com/view/fthp/toy">▶ 改造・制作の詳細を見る</a>
-          </p>
-        </div>
-        <img src="images/illust_make.png" alt="">
-      </div>
-
-      <div class="support">
-        <div>
-          <h2>貸し出しおもちゃ</h2>
-          <p>
-            スイッチ付きおもちゃを一定期間お貸しし、
-            実際にご家庭で試していただくことができます。
-          </p>
-          <p>
-            「どんなスイッチが合うのか分からない」
-            「まずは反応を見てみたい」
-            という場合に活用されています。
-          </p>
-          <p>
-            <a href="https://sites.google.com/view/fthp/rental">▶ 貸し出しおもちゃについて</a>
-          </p>
-        </div>
-        <img src="images/illust_rental.png" alt="">
-      </div>
-
-      <div class="support">
-        <div>
-          <h2>おもちゃの修理・おもちゃ病院</h2>
-          <p>
-            壊れてしまったおもちゃや、使いづらくなったおもちゃについても、
-            状態を確認したうえで修理や改造を行います。
-          </p>
-          <p>
-            地域のおもちゃ病院とも連携しながら対応しています。
-          </p>
-          <p>
-            <a href="https://sites.google.com/view/fthp/omochabyoin">
-              ▶ おもちゃ病院の紹介
-            </a>
-          </p>
-          <p class="note">
-            ※おもちゃの状態によっては対応が難しい場合があります。
-          </p>
-        </div>
-        <img src="images/illust_repair.png" alt="">
-      </div>
-
-      <div class="support">
-        <div>
-          <h2>メディア掲載</h2>
-          <p>
-            FTHPの活動は、新聞などのメディアでも紹介されています。
-          </p>
-          <p>
-            <a href="https://sites.google.com/view/fthp/media">
-              ▶ 新聞・メディア掲載を見る
-            </a>
-          </p>
-        </div>
-        <img src="images/illust_media.png" alt="">
-      </div>
-
-    </div>
-  </section>
-
-  <!-- CTA -->
-  <div class="cta">
-    <h2>まずはお気軽にご相談ください</h2>
+<div class="hero">
+  <div class="container hero-inner">
+    <h1>障がいのある子どもも<br>自分で「遊べた」を感じられる場をつくる</h1>
     <p>
-      おもちゃやスイッチについてのご質問・ご相談は、<br>
-      問い合わせフォームより受け付けています。
+      FTHPは、おもちゃの改造やスイッチ制作を通じて、
+      「操作できないから遊べない」を減らすための遊びの支援活動を行っています。
     </p>
-    <a href="https://sites.google.com/view/fthp/contact">お問い合わせはこちら</a>
   </div>
+</div>
+
+<section>
+  <div class="container">
+    <h2>私たちの活動について</h2>
+    <p>
+      電池で動くおもちゃの多くは、小さなボタンやスイッチ操作が必要です。
+      そのため、身体の動きに制限がある子どもにとっては、
+      「本当は興味があるのに遊べない」という状況が生まれがちです。
+    </p>
+    <p>
+      FTHPでは、市販のおもちゃに外部スイッチを取り付けたり、
+      お子さまの動きに合わせたスイッチを制作することで、
+      <strong>自分の力でおもちゃを動かして遊ぶ体験</strong>を支援しています。
+    </p>
+  </div>
+</section>
+
+<section>
+  <div class="container">
+    <h2>この支援でできるようになること</h2>
+
+    <div class="cards">
+      <div class="card">
+        <img src="images/illust_playable.png" alt="">
+        <p>今まで遊べなかったおもちゃが、工夫によって再び遊べるようになります。</p>
+      </div>
+
+      <div class="card">
+        <img src="images/illust_multi_switch.png" alt="">
+        <p>
+          複数のスイッチを使い分けることで、
+          お子さまに合った操作方法を試せます。
+        </p>
+        <p><a href="https://sites.google.com/view/fthp/switch">▶ スイッチのサンプルを見る</a></p>
+      </div>
+
+      <div class="card">
+        <img src="images/illust_consult.png" alt="">
+        <p>ご家庭の状況やお子さまの様子に合わせて、相談しながら進めることができます。</p>
+      </div>
+    </div>
+  </div>
+</section>
+
+<section>
+  <div class="container">
+
+    <div class="support">
+      <div>
+        <h2>スイッチ制作・おもちゃ改造</h2>
+        <p>
+          市販のおもちゃに外部スイッチを取り付けたり、
+          お子さまの身体の動きに合わせたスイッチを制作します。
+        </p>
+        <p>
+          動かしやすさだけでなく、安全性にも配慮し、
+          ご家庭で安心して使える形を一緒に考えます。
+        </p>
+        <p><a href="https://sites.google.com/view/fthp/toy">▶ 改造・制作の詳細を見る</a></p>
+      </div>
+      <img src="images/illust_make.png" alt="">
+    </div>
+
+    <div class="support">
+      <div>
+        <h2>貸し出しおもちゃ</h2>
+        <p>
+          スイッチ付きおもちゃを一定期間お貸しし、
+          実際にご家庭で試していただくことができます。
+        </p>
+        <p>
+          「どんなスイッチが合うのか分からない」
+          「まずは反応を見てみたい」
+          という場合に活用されています。
+        </p>
+        <p><a href="https://sites.google.com/view/fthp/rental">▶ 貸し出しおもちゃについて</a></p>
+      </div>
+      <img src="images/illust_rental.png" alt="">
+    </div>
+
+    <div class="support">
+      <div>
+        <h2>おもちゃの修理・おもちゃ病院</h2>
+        <p>
+          壊れてしまったおもちゃや、使いづらくなったおもちゃについても、
+          状態を確認したうえで修理や改造を行います。
+        </p>
+        <p>
+          地域のおもちゃ病院とも連携しながら対応しています。
+        </p>
+        <p><a href="https://sites.google.com/view/fthp/omochabyoin">▶ おもちゃ病院の紹介</a></p>
+        <p class="note">※おもちゃの状態によっては対応が難しい場合があります。</p>
+      </div>
+      <img src="images/illust_repair.png" alt="">
+    </div>
+
+    <div class="support">
+      <div>
+        <h2>メディア掲載</h2>
+        <p>FTHPの活動は、新聞などのメディアでも紹介されています。</p>
+        <p><a href="https://sites.google.com/view/fthp/media">▶ 新聞・メディア掲載を見る</a></p>
+      </div>
+      <img src="images/illust_media.png" alt="">
+    </div>
+
+  </div>
+</section>
+
+<div class="cta">
+  <h2>まずはお気軽にご相談ください</h2>
+  <p>
+    おもちゃやスイッチについてのご質問・ご相談は、
+    問い合わせフォームより受け付けています。
+  </p>
+  <a href="https://sites.google.com/view/fthp/contact">お問い合わせはこちら</a>
+</div>
 
 </body>
 </html>
