--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@ section p{margin-bottom:14px}
         <h2>貸し出しおもちゃ</h2>
         <p>スイッチ付きおもちゃを一定期間お貸しします。</p>
       </div>
-      <img src="images/illust_rental.png" alt="">
+      <img src="images/toy_rental.png" alt="">
     </div>
   </div>
 </section>
